파이어베이스테스트용 자바 XML 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.Capstone">
         <activity
             android:name=".FirebaseTestActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".Activity8Listitem"
             android:exported="true" />
