파이어베이스 로그인, 회원가입 기타등등 기본틀 추가 액티비티 3, 4 번 오류나니깐 건든사람 해결좀

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,19 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Capstone">
         <activity
-            android:name=".FirebaseTestActivity"
+            android:name=".MainActivity"
+            android:exported="true" />
+        <activity
+            android:name=".LoginActivity"
+            android:exported="true" />
+        <activity
+            android:name=".SignupActivity"
+            android:exported="true" />
+        <activity
+            android:name=".ResultActivity"
+            android:exported="true" />
+        <activity
+            android:name=".MyFirebaseMessagingService"
             android:exported="true" />
         <activity
             android:name=".Activity8Listitem"
