--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,14 @@
 
 
 buildscript {
+    ext.kotlin_version = '1.6.20'
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
         classpath 'com.google.gms:google-services:4.3.10'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
