--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,32 +13,39 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Capstone">
-        <activity
-            android:name=".AfterActivity"
-            android:exported="true" />
-        <activity
-            android:name=".MainActivity"
-            android:exported="true" />
-        <activity
-            android:name=".Activity8Listitem"
-            android:exported="true" />
-        <activity
-            android:name=".Activity7Groupchat"
-            android:exported="true" />
-        <activity
-            android:name=".Activity6Individchat"
-            android:exported="true" />
-        <activity
-            android:name=".Activity5Writer"
-            android:exported="true" />
-        <activity
-            android:name=".Activity4Reader"
-            android:exported="true" />
-        <activity
-            android:name=".Activity2Certified"
-            android:exported="true" />
+
         <activity
             android:name=".Activity1Intro"
+            android:exported="true" />
+        <activity
+            android:name=".Activity2Login"
+            android:exported="true" />
+        <activity
+            android:name=".Activity3Registration"
+            android:exported="true" />
+        <activity
+            android:name=".Activity4Certified"
+            android:exported="true" />
+        <activity
+            android:name=".Activity6Reader"
+            android:exported="true" />
+        <activity
+            android:name=".Activity7Writer"
+            android:exported="true" />
+        <activity
+            android:name=".Activity8Individchat"
+            android:exported="true" />
+        <activity
+            android:name=".Activity10Listitem"
+            android:exported="true" />
+        <activity
+            android:name=".LoginActivity"
+            android:exported="true" />
+        <activity
+            android:name=".SignUpActivity"
+            android:exported="true" />
+        <activity
+            android:name=".Activity9Groupchat"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -47,7 +54,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Activity3Main"
+            android:name=".Activity5Main"
             android:exported="true" />
     </application>
 
