--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.capstone">
+
     <!-- 인터넷 사용 권한 -->
     <uses-permission android:name="android.permission.INTERNET" />
+    <!-- 파이어베이스 Storage 읽기,쓰기 권한 -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
@@ -14,8 +16,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Capstone">
 
+        <!-- 액티비티 생성시 있는지 확인 -->
+        <activity
+            android:name=".Activity2Login"
+            android:exported="true" />
+        <activity
+            android:name=".Activity3SignUp"
+            android:exported="true" />
         <activity
             android:name=".Activity4Certified"
+            android:exported="true" />
+        <activity
+            android:name=".Activity5Main"
             android:exported="true" />
         <activity
             android:name=".Activity6Reader"
@@ -27,14 +39,13 @@
             android:name=".Activity8Individchat"
             android:exported="true" />
         <activity
+            android:name=".Activity9Groupchat"
+            android:exported="true" />
+        <activity
             android:name=".Activity10Listitem"
             android:exported="true" />
-        <activity
-            android:name=".Activity2Login"
-            android:exported="true" />
-        <activity
-            android:name=".Activity3SignUp"
-            android:exported="true" />
+
+        <!-- 처음 시작할 액티비티 -->
         <activity
             android:name=".Activity1Intro"
             android:exported="true">
@@ -44,9 +55,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".Activity5Main"
-            android:exported="true" />
     </application>
 
 </manifest>
